demos/hellok8s/federation/hellok8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellok8s-federated
spec:
  type: NodePort
  ports:
  - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30036
      protocol: TCP
  selector:
    name: hellok8s
